Some PMD cleanup: interfaces as types (Hashtable -> Map); Integer.valueOf() instead of the more memory consuming new Integer
git-svn-id: https://cdk.svn.sourceforge.net/svnroot/cdk/cdk/trunk@11598 eb4e18e3-b210-0410-a6ab-dec725e4b171